; ModuleID = '/home/carl/AnghaBench/radare2/libr/util/extr_calc.c_Nsetf.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/util/extr_calc.c_Nsetf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { double, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast ({ double, i64 } (double)* @Nsetf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal { double, i64 } @Nsetf(double %0) #0 {
  %2 = alloca %struct.TYPE_3__, align 8
  %3 = alloca double, align 8
  store double %0, double* %3, align 8
  %4 = load double, double* %3, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %2, i32 0, i32 0
  store double %4, double* %5, align 8
  %6 = load double, double* %3, align 8
  %7 = fptosi double %6 to i64
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %2, i32 0, i32 1
  store i64 %7, i64* %8, align 8
  %9 = bitcast %struct.TYPE_3__* %2 to { double, i64 }*
  %10 = load { double, i64 }, { double, i64 }* %9, align 8
  ret { double, i64 } %10
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
